# multibagger-claude1

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Feature.md  README.md  add_tickers.py  alpha_attribution.py  alpha_report.md  audit_results.txt  audit_runner.py  backfill_ml_backtest.py  backtest_engine.py  backtest_picks.py  backtest_qarp.py  backtest_report.md  backup.bat  backup.sh  check_db.py  check_schema.py  checklist_out.txt  checklist_output.txt  checklist_pyout.txt  cleanup_signals.py  commodity_list.py  config.py  database.py  db_cleanup.py  diagnose.py  docker-compose.yml  enrich_rs_signals.py  expand_universe.py  feature_price_vs_fundamentals.md  fetch_full_stock_data.py  git_files.txt  health_check.txt  health_check_utf8.txt  ingest_elite_picks.py  (+49 more)
Newmultibagger-main/: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  config.py  endpoints.txt  error_log.txt  feature_price_vs_fundamentals.md  main.py  paths.txt  pyproject.toml  report_generator.py  requirements-dev.txt  requirements.txt  scratch_test.py  sovereign_cli.py  test_quarterly.py  test_yf.py  ticker_list.py  utils.py
Newmultibagger-main/alembic/: env.py
Newmultibagger-main/app_routes/: analysis.py  contracts.py  regime.py  score_report.py  stocks.py  swarm.py  system.py  trading.py
Newmultibagger-main/artifacts/: test_ic_memo_reliance.md
Newmultibagger-main/backtest/: engine.py  liquidity_filter.py  survivorship_adjusted_loader.py
Newmultibagger-main/db/: __init__.py  db_core.py  models.py  repository.py
Newmultibagger-main/models/: schema.json
Newmultibagger-main/modules/: __init__.py  alerts.py  allocation_hrp.py  audit.py  cache.py  cagr_engine.py  capital_efficiency.py  capital_simulator.py  correlation.py  data_freshness.py  data_service.py  data_utils.py  db_utils.py  dependencies.py  dq_gates.py  errors.py  estimates.py  exceptions.py  exit_engine.py  financial_adapter.py  fundamental_filters.py  fundamentals.py  html_report.py  hybrid_scoring.py  liquidity.py  llm_engine.py  llm_validator.py  logger.py  ml_ops.py  ml_ranker.py  models.py  news.py  peer_analysis.py  pit_auditor.py  price_utils.py  probability.py  promoter_intel.py  quarterly_results.py  recovery.py  redundancy.py  (+13 more)
Newmultibagger-main/ops/: __init__.py  audit_result.txt  build_clean_dataset.py  check_alternatives.py  check_health.py  check_scan_list.py  cleaning_rules.yaml  cleanup_delisted.py  cleanup_test.py  generate_ticker_file.py  institutional_daily_scorecard.json  institutional_sprint_driver.py  run_data_quality_pipeline.py  scan_sobha.py  test_garp_with_news.py  test_peers.py  ticker_list_822.txt  update_calendar.py  update_sample_db.py  verify_delisted_candidates.py  verify_peers.py  verify_peers2.py  verify_roe_fix.py
Newmultibagger-main/portfolio/: allocator.py
Newmultibagger-main/research/: conviction_engine.py  super_investor_registry.py
Newmultibagger-main/scripts/: manual_dq_audit.py  migrate_52w_columns.py  pit_integrity_check.py  train_hybrid_model.py
Newmultibagger-main/templates/: audit_report.html  ic_memo.md
Newmultibagger-main/tests/: audit_log.txt  audit_sensitivity.py  blackbox_log.txt  conftest.py  debug_optimizer.py  e2e_scoring_pipeline.py  test_api.py  test_api_contracts.py  test_api_extended_endpoints.py  test_api_v96.py  test_backtest_engine.py  test_cli_backtest_walk_forward.py  test_concurrency_failure_harness.py  test_data_correctness.py  test_data_service_lazy.py  test_data_sources.py  test_extract_close.py  test_garp_strategy.py  test_hardening_contracts.py  test_hybrid_scoring_walk_forward.py  test_live_sources.py  test_live_sources_mocked.py  test_memory_system.py  test_new_features.py  test_phase67_pit.py  test_pipeline_resilience.py  test_price_fundamentals_api.py  test_report_generator.py  test_risk_scenario_replay.py  test_rs_cli.py  test_runtime_hardening.py  test_scoring_engine.py  test_sprint1_cagr.py  test_survivorship_loader.py
Newmultibagger-main/web-ui/: .eslintrc.cjs  index.html  tailwind.config.js  vite.config.ts
Newmultibagger-main/worker/: __init__.py  background_jobs.py  (+3 more)
(+469 files in other folders)
