[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name = "newmultibagger"
version = "3.0.0"
description = "Institutional-grade fundamental screener for Indian equities"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = []                           # managed via requirements.txt

[project.scripts]
newmultibagger = "main:app"                 # canonical entry point

# ── Tool: pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode   = "auto"
addopts        = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=modules",
    "--cov=screener",
    "--cov-report=term-missing",
    "--cov-fail-under=40",           # raise as test suite matures
]
markers = [
    "live: marks tests that call external APIs (deselect with -m 'not live')",
    "slow: marks slow-running tests",
    "integration: marks integration tests that need a running DB",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:src.main",  # our own deprecation wrapper
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:vectorbt",
]

# ── Tool: ruff (lint + format) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length    = 100
src            = [".", "modules", "brain", "backtest", "db", "worker", "research"]
exclude        = [
    ".agent", "__pycache__", "extracted_hhhhhh",
    "web-ui/node_modules", ".venv", "venv",
    "sovereign-cli.py", "sovereign_analyst_reports.py", "sovereign_mcp.py",
]

[tool.ruff.lint]
select  = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "T20", "SIM"]
ignore  = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg (FastAPI pattern)
    "T201",   # print statements — used deliberately for scan output
]

[tool.ruff.lint.isort]
known-first-party = ["modules", "brain", "backtest", "db", "worker", "research", "config"]

# ── Tool: mypy ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
warn_return_any        = true
warn_unused_ignores    = true
disallow_untyped_defs  = false   # start permissive; tighten per module
ignore_missing_imports = true
files                  = ["modules/scoring.py", "modules/retry_utils.py", "db/"]
