[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# Project metadata
[project]
name = "newmultibagger"
version = "3.0.0"
description = "Institutional-grade fundamental screener for Indian equities"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
newmultibagger = "main:app"

# Tool: ruff (lint + format)
[tool.ruff]
target-version = "py311"
line-length = 100
src = [".", "modules", "brain", "backtest", "db", "worker", "research"]
exclude = [
    ".agent", "__pycache__", "extracted_hhhhhh",
    "web-ui/node_modules", ".venv", "venv",
    "sovereign_cli.py", "sovereign_analyst_reports.py", "sovereign_mcp.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PIE", "T20", "SIM"]
ignore = [
    "E501",
    "B008",
    "T201",
    "E402",
    "B904",
    "E722",
    "B015",
    "E741",
    "F841",
    "SIM",
    "N8",
    "I001",
    "F401",
    "UP007",
    "B024",
]

[tool.ruff.lint.isort]
known-first-party = ["modules", "brain", "backtest", "db", "worker", "research", "config"]

# Tool: mypy
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
files = ["modules/scoring.py", "modules/retry_utils.py", "db/"]
